fix(Forge安装): headless JVM改走JNI调用并拦截System.exit，修复1.20.1装到85%闪退
根因：launchHeadlessJVM经JLI_Launch启动processor，标准OpenJDK launcher在main返回后调用exit()终结进程，写version.json(0.9)/注册profile(0.95)永远执行不到，表现为 All N finished + 0.85 后 exit(0) 闪退，versions下仅剩空目录且lastVersionId为空。

对照ZalithLauncher2独立子JVM模型，iOS禁fork/exec故以进程内VM+可返回调用等价实现：JNI_CreateJavaVM反射调ForgeProcessorRunner.main；另以SecurityManager拦截processor的System.exit，exit(0)转成功校验。

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>